# navigation-screen-game

./: .gitignore  CMakeLists.txt  NavigationPage.slnx  NavigationPage.vcxproj  NavigationPage.vcxproj.filters  Navigator.cpp  Navigator.h  README.md  README.pt-BR.md  Screen.cpp  Screen.h
NavigationPage/x64/Debug/NavigationPage.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  NavigationPage.lastbuildstate
NavigationPage/x64/Release/NavigationPage.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  NavigationPage.lastbuildstate
cmake/: NavigationPageConfig.cmake.in
x64/Debug/: NavigationPage.idb  NavigationPage.lib
x64/Release/: NavigationPage.lib
